Adjust containers to not be hidden under Fixed-top nav

--- a/client/main.css
+++ b/client/main.css
@@ -46,9 +46,9 @@ body {
     margin-top: 8px;
     margin-right: 15px;
     margin-bottom: 8px;
-    background-color: red !important;
+    background-color: #62040F;
     background-image: none;
-    border: 1px solid transparent;
+    border: 1px solid #62040F;
     border-radius: 4px;
 }
 
@@ -86,7 +86,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    opacity: 5;
+    opacity: 0;
     transition: all ease .5s;
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
